fix appid variable name

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -51,7 +51,7 @@
 	    document.getElementById("data").innerHTML = "<FONT color=#00BB00>ONLINE</FONT>";
 	});
 
-	microgear.connect(APPID);
+	microgear.connect(appid);
 	
 
 </script>
